implementing room persistence

--- a/features/movie/build.gradle
+++ b/features/movie/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id "org.jetbrains.kotlin.kapt"
 }
 
 android {
@@ -30,6 +31,9 @@ android {
 }
 
 dependencies {
+    kapt libs.room.compiler
+    implementation libs.bundles.retrofit
+    implementation libs.bundles.room
     implementation libs.bundles.feature
     testImplementation libs.bundles.test
 }
