--- a/build.gradle
+++ b/build.gradle
@@ -3,4 +3,5 @@ plugins {
     id 'com.android.application' version libs.versions.agp apply false
     id 'com.android.library' version libs.versions.agp apply false
     id 'org.jetbrains.kotlin.android' version libs.versions.kotlin apply false
+    id "org.jetbrains.kotlin.kapt" version libs.versions.kotlin apply false
 }
