--- a/features/favorite/build.gradle
+++ b/features/favorite/build.gradle
@@ -30,6 +30,7 @@ android {
 }
 
 dependencies {
+    implementation libs.androidx.datastore
     implementation libs.bundles.feature
     testImplementation libs.bundles.test
 }
