--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,7 +15,6 @@ androidx-constraintlayout = "2.1.4" # https://maven.google.com/web/index.html?q=
 androidx-core-ktx = "1.9.0" # https://maven.google.com/web/index.html?q=core-ktx#androidx.core:core-ktx
 androidx-datastore = "1.0.0" # https://maven.google.com/web/index.html?q=datastore#androidx.datastore:datastore-preferences
 androidx-lifecycle-runtime-ktx = "2.5.1" # https://maven.google.com/web/index.html?q=lifecycle-runtime-ktx#androidx.lifecycle:lifecycle-runtime-ktx
-androidx-swiperefreshlayout = "1.1.0" # https://maven.google.com/web/index.html?q=refresh#androidx.swiperefreshlayout:swiperefreshlayout
 coil = "2.2.2" # https://github.com/coil-kt/coil/releases
 coroutines = "1.6.4" # https://github.com/Kotlin/kotlinx.coroutines/releases
 junit = "4.13.2" # https://github.com/junit-team/junit4/releases
@@ -40,7 +39,6 @@ androidx-constraintlayout = { module = "androidx.constraintlayout:constraintlayo
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidx-core-ktx" }
 androidx-datastore = { module = "androidx.datastore:datastore-preferences", version.ref = "androidx-datastore" }
 androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidx-lifecycle-runtime-ktx" }
-androidx-swiperefreshlayout = { module = "androidx.swiperefreshlayout:swiperefreshlayout", version.ref = "androidx-swiperefreshlayout" }
 coil = { module = "io.coil-kt:coil", version.ref = "coil" }
 coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
@@ -70,14 +68,16 @@ feature = [
     "androidx-appcompat",
     "androidx-constraintlayout",
     "androidx-core-ktx",
-    "androidx-datastore",
     "androidx-lifecycle-runtime-ktx",
-    "androidx-swiperefreshlayout",
     "coil",
     "coroutines-core",
     "koin-android",
+]
+retrofit = [
     "retrofit-core",
     "retrofit-gson",
+]
+room = [
     "room-ktx",
     "room-runtime",
 ]
