--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,6 +24,7 @@ retrofit = "2.9.0" # https://github.com/square/retrofit/tags
 room = "2.5.0" # https://developer.android.com/jetpack/androidx/releases/room
 
 # Test dependencies
+androidx-test-arch = "2.1.0" # https://maven.google.com/web/index.html?q=androidx.arch.c#androidx.arch.core:core-testing:2.1.0
 androidx-test-core = "1.5.0" # https://maven.google.com/web/index.html?q=androidx.test#androidx.test:core-ktx
 androidx-test-junit = "1.1.5" # https://maven.google.com/web/index.html?q=androidx.test#androidx.test.ext:junit-ktx
 espresso = "3.5.1" # https://developer.android.com/jetpack/androidx/releases/test
@@ -49,6 +50,7 @@ room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
 
 # Test dependencies
+androidx-test-arch = { module = "androidx.arch.core:core-testing", version.ref = "androidx-test-arch" }
 androidx-test-core = { module = "androidx.test:core-ktx", version.ref = "androidx-test-core" }
 androidx-test-junit = { module = "androidx.test.ext:junit-ktx", version.ref = "androidx-test-junit" }
 coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
@@ -82,21 +84,23 @@ room = [
     "room-runtime",
 ]
 test = [
+    "androidx-test-arch",
     "androidx-test-core",
     "androidx-test-junit",
     "coroutines-test",
     "junit",
+    "koin-test",
+    "koin-junit4",
     "mockk",
     "okhttp-mockwebserver",
     "roboletric",
     "turbine",
 ]
 androidTest = [
+    "androidx-test-arch",
     "androidx-test-core",
     "androidx-test-junit",
     "coroutines-test",
     "espresso-core",
     "espresso-contrib",
-    "koin-test",
-    "koin-junit4",
 ]
